# SmartScore

./: .cfnlintrc  .gitignore  .pre-commit-config.yaml  IDEA.md  Makefile  README.md  bucket_template.yaml  deploy.yml  lambda_template.yaml  pyproject.toml  pytest.ini  requirements.txt  template.yaml
.github/workflows/: deploy.yml  lint-and-test.yml
build_scripts/: compile.sh  deploy.sh  new_deploy.sh  package.sh  rust_compile.sh
lib/: bets.csv  data.csv
smartscore/: config.py  constants.py  decorators.py  email_utility.py  event_handler.py  feature_flags.py  service.py  utility.py
smartscore/C/: header.h  main.c
smartscore/schemas/: db_player.py  player_info.py  team_info.py
smartscore/scripts/: calculate_accuracy.py  find_weights.py  find_weights_c.py  find_weights_gpu.py  get_odds.py  live_updates.py  preview_email.py  shared.py  test_using_tims.py  test_weights.py
src/: API.py  Database.py  DraftKings.py  Player.py  Predictor.py  Tims.py  main.py  oddsToProb.py
src/C/: header.h  helper.c  main.c  makefile
templates/: get_all_players.asl.json  get_players.asl.json  notify_users.asl.json  player_processing_pipeline.asl.json  template.yaml
tests/: conftest.py
tests/data/: old_entries.json  players_input.json  schedule_data.json  teams_response.json
tests/unit/: conftest.py  test_decorators.py  test_email_preferences.py  test_event_handler.py  test_handle_get_players_from_team.py  test_handle_get_teams.py  test_handle_save_historic_db.py  test_rust.py  test_service.py  test_service_predictions.py  test_utility.py  test_utility_schedule_run.py
(+10 files in other folders)
